# research-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
agent/: core.py
agent/tools/: save_contact.py  web_search.py
api/: client.py  main.py
config/: __init__.py  database.py
database/: session.py
database/alembic/: env.py
database/alembic/versions/: 43ef2034d24a_fix_date_bug.py  75d30dfdb905_add_search_query_plan.py  a81c4e67d2f9_add_contact_form_url.py  b92d7f30e4a1_add_recipient_fields.py  c3d9a29f40b2_add_search_runs.py  fce3847f9ced_base_models.py
database/models/: __init__.py  communication.py  contact.py  search_run.py
database/repositories/: communication_repository.py  contact_repository.py  search_run_repository.py
schemas/: communication.py  contact.py  save_contact_schema.py  search_run.py  statistics.py
services/: communication_service.py  contact_service.py  email_sender.py  logger.py  mailing_service.py  search_query_planner.py  search_run_service.py  statistics_service.py
telegram/: bot.py  command_handler.py  review.py  statistics.py
telegram/keyboards/: callback.py  callback_data.py  main.py  menu.py
tests/: test_mailing_service.py  test_search_query_planner.py  test_statistics_view.py
utils/: enums.py  exceptions.py  prompt.py
