[project]
name = "vkorni-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.30.0",
    "aiohttp>=3.14.2",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "loguru>=0.7.3",
    "openai>=2.46.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]
